After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 614222 - nautilus-sendto can't pop-up thunderbird write-mail dialog
nautilus-sendto can't pop-up thunderbird write-mail dialog
Status: RESOLVED FIXED
Product: nautilus-sendto
Classification: Applications
Component: general
unspecified
Other All
: Normal major
: ---
Assigned To: nautilus-sendto-maint
nautilus-sendto-maint
Depends on:
Blocks:
 
 
Reported: 2010-03-29 07:30 UTC by Halton Huo
Modified: 2010-06-09 16:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Strip arguments defined in /desktop/gnome/url-handlers/mailto/command (1.45 KB, patch)
2010-03-29 09:47 UTC, Halton Huo
none Details | Review
Fix thunderbird's mailto command (1.40 KB, patch)
2010-06-09 16:29 UTC, Bastien Nocera
committed Details | Review

Description Halton Huo 2010-03-29 07:30:35 UTC
Thunderbird set /desktop/gnome/url-handlers/mailto/command as 
   /usr/bin/thunderbird "%s"

This will cause the bug described in http://defect.opensolaris.org/bz/show_bug.cgi?id=15332.

The root cause is the command is translated as :
   /usr/bin/thunderbird "-compose "to='1@gmail.com',attachment='file:///export/home/jack/Desktop/tset'""

Obviously thunderbird won't run with it.
Comment 1 Halton Huo 2010-03-29 07:31:08 UTC
I've talked with mozilla developer (Ginn), he said this gconf key is for mailto protocol. nautilus-sendto does not follow the mailto protocol, it just want to use know the mail command. He suggest nautilus-sendto should only get pure command from this gconf key, which means nautilus-sendto should give up any arguments in /desktop/gnome/url-handlers/mailto/command.

For thunderbird case, nautilus-sendto should only get "/usr/bin/thunderbird", then append the argument that nautilus-sendto needs.

Same, if evolution set gconf key as
   /usr/bin/evolution --component=mail %s
nautilus-sendto should only get "/usr/bin/evolution", then append the argument that nautilus-sendto needs.

If this is right fix to go, I'll go ahead to write the patch.
Comment 2 Halton Huo 2010-03-29 09:47:57 UTC
Created attachment 157363 [details] [review]
Strip arguments defined in /desktop/gnome/url-handlers/mailto/command

Here comes the patch based on idea on comment #1.

I've tested with evolution, thunderbird, slypheed, balsa, claws-mail.

I do not have anjal installed cause of the dependency issue. It would be appreciated that anyone want to confirm this patch works with anjal.
Comment 3 Halton Huo 2010-04-14 05:50:33 UTC
Anyone can review this patch?
Comment 4 Bastien Nocera 2010-06-09 16:29:47 UTC
Created attachment 163210 [details] [review]
Fix thunderbird's mailto command

Seeing as it's the only mailer to be such a pain.
Comment 5 Bastien Nocera 2010-06-09 16:30:55 UTC
Fixed differently in master and gnome-2-28.

FWIW, Thunderbird is the only mailer to cause such a huge amount of problems.

Attachment 163210 [details] pushed as 52ed3fb - Fix thunderbird's mailto command