Fix thunderbird's mailto command

Seeing as it's the only mailer to be such a pain.

https://bugzilla.gnome.org/show_bug.cgi?id=614222